# Yuzhou-rust-mini-projects

./: .gitignore  Makefile  README.md
week1-MarcoPolo/: Cargo.toml  README.md
week1/src/: main.rs
week10-json-book-searcher/: Cargo.toml  README.md  books.json
week10-json-book-searcher/src/: main.rs
week11-url-shortener/: Cargo.toml  README.md
week11-url-shortener/src/: lib.rs  main.rs
week2/: Cargo.toml
week2-simple-calculator/: Cargo.toml  Makefile  README.md
week2-simple-calculator/src/: main.rs
week2/src/: lib.rs  main.rs
week3/: Cargo.toml  Dockerfile
week3-actix/: Cargo.toml  Dockerfile  Makefile
week3-actix/src/: lib.rs  main.rs
week3-integer-to-roman/: Cargo.toml  Makefile  README.md
week3-integer-to-roman/src/: lib.rs  main.rs
week4-actix/: Cargo.toml  README.md
week4-actix/src/: lib.rs  main.rs
week5-rust-bert/: Dockerfile
week5-rust-bert-chatbot/: Dockerfile  README.md
week6-actix-kubernetes/: Dockerfile  README.md
week6-actix-kubernetes/src/: lib.rs
week6-learning-kubernetes-and-rust-bert-inside-docker/actix-kubernetes/: Makefile  README.md
week6-learning-kubernetes-and-rust-bert-inside-docker/rust-bert-docker/: Cargo.toml  Makefile
week6-learning-kubernetes-and-rust-bert-inside-docker/week6-actix-kubernetes/: Cargo.toml  README.md
week6-learning-kubernetes-and-rust-bert-inside-docker/week6.5-rust-bert-docker/: README.md
week6.5-rust-bert-docker/: .gitignore  Dockerfile
week7/: Cargo.toml  README.md
week8-parallel-quick-sort/: Cargo.toml  README.md
week9-rust-regression/: Cargo.toml  README.md
(+9 files in other folders)
